# torch-batteries

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  docs.yml
notebooks/: example.ipynb  function_fitting.ipynb  image_classification.ipynb  lr_sweep_early_stopping.ipynb  tracking_integration.ipynb
scripts/: validate_version.sh
scripts/ci/: run_check.sh
src/torch_batteries/: __init__.py  const.py  trainer.py
src/torch_batteries/callbacks/: __init__.py  early_stopping.py  experiment_tracking.py  model_checkpoint.py
src/torch_batteries/events/: core.py  handler.py
src/torch_batteries/tracking/: __init__.py  base.py  tensorboard.py  types.py  wandb.py
src/torch_batteries/trainer/: context.py  core.py  types.py
src/torch_batteries/utils/: __init__.py  batch.py  device.py  logging.py
src/torch_batteries/utils/progress/: __init__.py  base.py  factory.py  progress.py  progress_bar.py  silent.py  simple.py
tests/: test_package.py  test_trainer.py  test_utils_progress.py
tests/callbacks/: __init__.py  test_early_stopping.py  test_experiment_tracking.py  test_model_checkpoint.py
tests/events/: __init__.py  test_core.py
tests/tracking/: __init__.py  test_wandb.py
tests/trainer/: __init__.py  test_core.py
tests/utils/: test_device.py  test_formatting.py  test_metrics.py
tests/utils/progress/: __init__.py  test_bar.py  test_factory.py  test_metrics.py  test_silent.py  test_simple.py
