[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-batteries"
version = "0.1.0"
description = "A lightweight Python package that supplies batteries-included abstractions for PyTorch workflows"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Michal Szczygiel"},
    {name = "Arkadiusz Paterak"},
    {name = "Antoni Zięciak"}
]
keywords = ["pytorch", "machine learning", "deep learning", "training", "evaluation"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "torch>=2.9.0",
]

[dependency-groups]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
lint = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
build = [
    "build>=1.0.0",
    "twine>=4.0.0",
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "build"},
]

[project.urls]
Homepage = "https://github.com/michalszc/torch-batteries"
Repository = "https://github.com/michalszc/torch-batteries"
Issues = "https://github.com/michalszc/torch-batteries/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# Enable pycodestyle (E, W), Pyflakes (F), isort (I), and other useful rules
select = ["E", "W", "F", "I", "N", "UP", "YTT", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = [
    # Allow assert statements (needed for tests)
    "S101",
    # Allow magic values in comparisons (common in tests)
    "PLR2004",
    # Avoid conflicts with formatter
    "COM812",
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Per-file ignores for test files
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "ARG"]  # Allow asserts, magic values, and unused args in tests

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Automatically detect line ending
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/torch_batteries"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]
